--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,6 @@ ul {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    align-items: stretch;
     width: 100%;
     margin-top: 1rem;
 }
@@ -117,9 +116,14 @@ a {
     color: hsl(0, 0%, 100%);
 }
 
+li a {
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
 li:hover, li:focus {
     background-color: hsl(75, 94%, 57%);
-    cursor: pointer;
 }
 
 li:hover a, li:focus a {
